--- a/style.css
+++ b/style.css
@@ -8,7 +8,15 @@ body{
     display: grid;
     justify-content: center;
 }
+
+.card > img{
+    height: 20px;
+    width: 20px;
+    
+}
 .card{
+    /* background-image: url(./day.jpeg); */
+    background-size: cover;
     height: 400px;
     width: 300px;
     padding: 5px;
@@ -24,6 +32,8 @@ body{
     font-weight: 100;
 }
 .card2{
+    /* background-image: url(./day.jpeg); */
+    background-size: cover;
     margin-top: 20px;
     height: 70px;
     width: 310px;
@@ -49,7 +59,8 @@ input{
    
 }
 #btn{
-    background-color: #2D9596;
+    font-size: 20px;
+    background-color: transparent;
     border: none;
     border-top-right-radius: 17px;
     border: 2px solid #2D9596;
@@ -59,6 +70,7 @@ input{
 }
 ::placeholder{
     color: #F1FADA;
+    font-weight: 500;
 }
 .intarnal2{
     padding: 10px;
@@ -70,7 +82,7 @@ input{
     margin-bottom: 20px;
 }
 .post{
-    margin-top: 20px;
+    margin-top: 5px;
     display: flex;
     justify-content: center;
     
